<resources>
    <string name="app_name">Vota APP</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Vota APP</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmacaoSenha">Confirmação Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_title">Pesquisar</string>
    <string name="quantidade">Quantidade:</string>
    <string name="unidadeMedida">Unidade de medida:</string>
    <string name="tipoEmbalagem">Tipo de embalagem:</string>
    <string name="categoria">Categoria:</string>
    <string name="nome_produto">Nome:</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

</resources>
