<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_produto_detalhes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prices.products.productsprices.ProdutoDetalhesActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:id="@+id/imageViewProduto"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"/>

    <Button
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btAdd"
        android:layout_width = "55dp"
        android:layout_height = "45dp"
        android:drawableLeft="@android:drawable/ic_input_add"/>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tabela_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewProduto"
        android:layout_marginTop="16sp">

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="@string/nome_produto"
                android:padding="3dip" />
            <TextView
                android:id="@+id/tvNome"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:padding="3dip"
                android:layout_column="1"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="@string/categoria"
                android:padding="3dip" />
            <TextView
                android:id="@+id/tvCategoria"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:padding="3dip"
                android:layout_column="1"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="@string/tipoEmbalagem"
                android:padding="3dip"
                android:layout_span="1"/>
            <TextView
                android:id="@+id/tvTipoEmbalagem"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:padding="3dip"
                android:layout_column="1"
                android:layout_span="2"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="@string/unidadeMedida"
                android:padding="3dip"
                android:layout_span="1"/>
            <TextView
                android:id="@+id/tvQuantidade"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:padding="3dip"
                android:layout_column="1"
                android:layout_span="2"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="0"
                android:text="@string/quantidade"
                android:padding="3dip"
                android:layout_span="1"/>
            <TextView
                android:id="@+id/tvUnidadeMedida"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp"
                android:padding="3dip"
                android:layout_column="1"
                android:layout_span="2"/>
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

    <TextView
        android:id="@+id/tvPrecosRecentes"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="Pesquisa de preços recentes: "
        android:layout_below="@+id/tabela_produto"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"/>

    <TableLayout
        android:id="@+id/table_precos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvPrecosRecentes">
    </TableLayout>

</RelativeLayout>
